--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
       <section>
-        <h1>Bob's Burgers</h1>
+        <img src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
         <button>Order Now</button>
       </section>
 
@@ -31,15 +31,18 @@
         <h2>World's Best Burgers</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <button>View Menu</button>
+        <img src="img/bobs-burger.png" alt="Cartoon rendering of a hamburger." title="Hamburger">
       </section>
 
       <section>
+        <img src="img/bob-headshot.png" alt="Cartoon headshot of Bob." title="Bob">
         <h2>Dine-in or Take-out</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <button>Contact Us</button>
       </section>
 
       <footer>
+        <img src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
       </footer>
     </main>
   </body>
