Added coding to index.html for LESS page, and created initial LESS page.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="">
-    <title></title>
+    <title>Bob's Burgers</title>
     <meta name="description" content="">
+     <link rel="stylesheet/less" type="text/css" href="styles.less" />
   </head>
 
 
@@ -45,5 +45,6 @@
         <img src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
       </footer>
     </main>
+   <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
   </body>
 </html>
