--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Bob's Burgers</title>
     <meta name="description" content="">
-     <link rel="stylesheet/less" type="text/css" href="styles.less" />
+     <link rel="stylesheet/less" type="text/css" href="less/styles.less" />
   </head>
 
 
