--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Menu</li>
-          <li>About Us</li>
-          <li>Order Now</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Order Now</a></li>
         </ul>
       </nav>
     </header>
