Created the hero in the less files and fixed index.html to help with this.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
       </nav>
     </header>
 
+
     <main>
-      <section>
-        <img src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
-        <button>Order Now</button>
+      <section class="hero">
+         <img class="hero-img" src="img/banner-bg.png" alt="Background to hero image.">
+         <section class='hero-items'>
+           <img class="reg-photo" src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers"><br>
+           <button>Order Now</button>
+         </section>
       </section>
 
       <section>
