Fixed navigation bar to look like the mockup.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Menu</a></li>
           <li><a href="#">About Us</a></li>
-          <li><a href="#">Order Now</a></li>
+          <li><span><a href="#">Order Now</a></span></li>
         </ul>
       </nav>
     </header>
