--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
       <section class="hero">
          <img class="hero-img" src="img/banner-bg.png" alt="Background to hero image.">
          <section class='hero-items'>
-           <img class="reg-photo" src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers"><br>
-           <button><a href="#">Order Now</a></button>
+           <p>
+             <img class="reg-photo" src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
+           </p>
+           <p>
+             <a href="#"><button type="button" class="btn btn-primary">Order Now</button></a>
+          </p>
+
          </section>
       </section>
 
       <section>
         <h2>World's Best Burgers</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        <button><a href="#">View Menu</a></button>
+        <a href="#"><button type="button" class="btn btn-primary">View Menu</button></a>
         <img src="img/bobs-burger.png" alt="Cartoon rendering of a hamburger." title="Hamburger">
       </section>
 
@@ -46,7 +51,7 @@
         <img src="img/bob-headshot.png" alt="Cartoon headshot of Bob." title="Bob">
         <h2>Dine-in or Take-out</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        <button><a href="#">Contact Us</a></button>
+        <a href="#"><button type="button" class="btn btn-primary">Contact Us</button></a>
       </section>
 
       <footer>
