--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </section>
 
       <section class="contact-us">
-        <img src="img/bob-headshot.png" alt="Cartoon headshot of Bob." title="Bob">
+        <img class="float-left" src="img/bob-headshot.png" alt="Cartoon headshot of Bob." title="Bob">
         <h1>Dine-in or <span>Take-out</span></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p class="contact-us-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <a href="#"><button type="button" class="btn btn-primary">Contact Us</button></a>
       </section>
 
       <footer>
-        <img src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
+        <img class="footer-logo" src="img/logo.png" alt="Logo for Bobs Burgers" title="Logo for Bobs Burgers">
       </footer>
     </main>
 
